--- a/game/package.json
+++ b/game/package.json
@@ -15,7 +15,7 @@
     "wheel-react": "^1.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
